[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4.1"
bytes = "1.5.0"
futures = "0.3.29"
time = "0.3.30"
crossbeam = "0.8.2"
thread_local = "1.1.7"
tokio-stream = "0.1.14"
